fixed some issues on mobile for firefox

--- a/client/src/styles/components/card.module.css
+++ b/client/src/styles/components/card.module.css
@@ -82,7 +82,7 @@
 	font-weight: 300;
 }
 
-.content span {
+.content strong {
 	font-weight: bold;
 }
 
