--- a/client/src/styles/components/home/features.module.css
+++ b/client/src/styles/components/home/features.module.css
@@ -8,13 +8,14 @@
 	justify-content: center;
 	align-items: center;
 	gap: 40px;
+
 	padding: 20px;
 	overflow: hidden;
 }
 
 .left,
 .right {
-	margin-top: 240px;
+	margin-top: 120px;
 	position: relative;
 	width: 620px;
 	max-width: 620px;
@@ -131,9 +132,6 @@
 		flex-wrap: wrap;
 	}
 
-	.left {
-		margin-top: 100px;
-	}
 	.right {
 		margin-top: 0;
 		height: fit-content;
