--- a/client/src/styles/components/home/service.module.css
+++ b/client/src/styles/components/home/service.module.css
@@ -34,6 +34,10 @@
 	display: none;
 }
 
+.wrapper {
+	scrollbar-width: none;
+}
+
 /* media queries  */
 
 @media (max-width: 1024px) {
