--- a/client/src/styles/pages/home.module.css
+++ b/client/src/styles/pages/home.module.css
@@ -55,7 +55,7 @@
 /* line  */
 .line {
 	margin-top: 100px;
-	margin-bottom: -120px;
+
 	margin-inline: auto;
 	width: 80%;
 	height: 1px;
